Add ability to add entries in bulk
